# security-kratos-oidc-provider-ui

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.circleci/: config.yml
.github/workflows/: build.yaml  check.yaml  release.yaml
src/: main.rs  tests.rs
templates/: form.html.hbs
