[package]
name = "oidcer"
version = "0.1.0"
authors = ["Russell Duhon <russell.duhon@modusbox.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.8"
reqwest = { version = "0.11.1", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wiremock = "0.5"
async-std = {version = "1", features = ["attributes"]}
thiserror = "1.0"
rocket_prometheus = "0.7.0"

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["handlebars_templates"]